<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_main_addNewFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add_folder_white_24dp" />

        </FrameLayout>

        <EditText
            android:id="@+id/et_main_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_main_search"
            android:drawableStart="@drawable/ic_search_gray_24dp"
            android:drawablePadding="4dp"
            android:hint="@string/search_something"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            app:checkedButton="@id/btn_main_list"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_main_list"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_list_black_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_main_grid"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_grid_black_24dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <FrameLayout
            android:id="@+id/fram_main_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tg_main"
            android:layout_marginTop="24dp">

        </FrameLayout>


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>